--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="wrapper">
       <img src="./assets/image-1.jpg" alt="Juno College of Technology classroom with students">
       <div class="tech">
-        <h1>Tech Challenge</h1>
+        <h1>Classroom</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, fugit quisquam ipsum dolores dolore
           pariatur voluptate impedit adipisci expedita dignissimos tempora nihil aspernatur molestiae voluptatum.</p>
       </div>
